--- a/mission/style.css
+++ b/mission/style.css
@@ -2,23 +2,29 @@ header {
     text-transform: uppercase;
 }
 
-#main-title {
-    font-size: 50px;
+header {
     text-align: center;
 }
 
-#sub-header {
+h1 {
+    font-size: 50px;
+    letter-spacing: .5px;
+}
+
+h2 {
+    display: inline-block;
+    border-bottom: 2px solid lightgray;
+    padding-bottom: 10px;
     color: #006EB6;
-    text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     padding-top: 20px;
+    letter-spacing: .5px;
 }
 
 main {
     text-align: left;
     width: 600px;
-    margin-left: 450px;
-    letter-spacing: .5px;
+    margin: 0 auto;
     line-height: 1.5;
     font-size: 20px;
     padding-top: 50px;
@@ -28,7 +34,7 @@ main {
     font-style: italic;
 }
 
-.points {
+ol {
     padding-left: 30px;
 }
 
@@ -40,5 +46,4 @@ footer {
 
 img {
     width: 200px;
-    height: 150px;
 }
