--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,5 +1,7 @@
 header {
     text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
 }
 
 .skiptocontent a {
@@ -46,10 +48,10 @@ li {
 
 .book {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
-    row-gap: 0;
-    margin: 0;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-auto-rows: auto;
+    row-gap: 20px;
+    margin: 20px;
     padding: 0;
 }
 
@@ -57,13 +59,14 @@ li {
     text-align: end;
     border-right: 2px solid #640D14;
     padding-right: 5%;
-    margin-right: 10%;
+    grid-column: 1 / 2;
 }
 
 .column2 {
     text-align: center;
     margin: 0;
     padding: 0;
+    grid-column: 2 / 3;
 }
 
 .column2 h1 {
@@ -72,7 +75,17 @@ li {
 
 .column3 {
     border: 2px solid #640D14;
-    padding-left: 5%;
+    padding: 10px;
     margin-left: 10%;
-    grid-row: span 2;
+    grid-column: 3 / 4;
+    grid-row: 1 / -1;
+    align-self: start;
+}
+
+article {
+    display: contents;
+}
+
+.book > article {
+    grid-column: 1 / span 2;
 }
